<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="	#00BFFF"
    tools:context=".Feedback">


    <EditText
        android:id="@+id/email"
        android:layout_width="331dp"
        android:layout_height="64dp"
        android:background="@drawable/textbox"
        android:text="@string/sisirkhanal20_gmail_com_aryal_kiran100_gmail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221"
        android:enabled="false"
        android:autofillHints="" />

    <EditText
        android:id="@+id/feedback"
        android:layout_width="375dp"
        android:layout_height="189dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/textbox"

        android:hint="@string/feedback"
        app:layout_constraintBottom_toTopOf="@+id/btnsend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="TODO"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnsend"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_below="@id/feedback"
        android:layout_marginBottom="68dp"
        android:background="@drawable/button_rounded"
        android:text="@string/send_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />



</androidx.constraintlayout.widget.ConstraintLayout>